--- a/server/pom.xml
+++ b/server/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.19</version>
+            <version>8.0.26</version>
         </dependency>
         <!-- mybatis-plus -->
         <dependency>
@@ -77,6 +77,11 @@
         <repository>
             <id>aliyun</id>
             <url>https://maven.aliyun.com/repository/public</url>
+        </repository>
+        <!-- 添加 Maven 中央仓库 -->
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
         </repository>
     </repositories>
 
